# GUIAgentEnv

./: .gitignore  README.md  config.py  entry.py  requirements.txt  run_experiment.sh
agents/: agent_base.py  configs.py  run.py  run_2.py  utils.py  utils_mobile.py
agents/anthropic_agent/: agent.py  requirements.txt
agents/browser_use_agent/: agent.py  requirements.txt
agents/cog_agent/: agent.py
agents/default_agent/: agent.py  configs.py  requirements.txt
agents/default_agent_mobile/: actionlist.py  agent.py  android_controller.py  baseaction.py  model.py  prompts.py  requirements.txt
agents/mobile_agent_e/: agent.py
agents/open_manus_agent/: agent.py  requirements.txt
agents/self_operating_computer_agent/: agent.py
agents/ui_tars_agent/: agent.py  requirements.txt
agents/ui_tars_agent/UI-TARS-main/codes/: .gitignore  README.md  makefile  pyproject.toml
agents/ui_tars_agent/UI-TARS-main/codes/tests/: action_parser_test.py  inference_test.py
agents/ui_tars_agent/UI-TARS-main/codes/ui_tars/: action_parser.py  prompt.py
agents/web_voyager_agent/: agent.py  requirements.txt
android/: Dockerfile  start.sh
dataset/: README.md  base_dataset.py  golden_trajectory.py  riwebbench_dataset.py  utils.py
dataset/check/: 1-ImageOverlay.json
judges/: base_judge.py  evaluation_pipeline.py  example_usage.py  interface.py  llm_caller.py  llm_judge.py  multimodal_judge.py  qwen_vl_caller.py  run_qwen_test.sh  test_evaluation_with_qwen.py
linux/: Dockerfile  start.sh
tools/: __init__.py  base.py  bash.py  browser.py  registry.py  text_editor.py
(+320 files in other folders)
